feat: コンテキストメニューに「固定タブも含めてすべてしまう」機能を追加
拡張アイコンの右クリックメニューに、固定タブを含むすべてのタブを
保存・クローズする機能を追加した。

変更内容:
- contextMenu.ts: 新メニュー項目の作成とハンドラ関数を追加
- en.json/ja.json: ローカリゼーションを追加
- contextMenu.test.ts: ユニットテスト（10件）を追加

※アイコンクリック時の固定タブ除外は既に実装済みであることを確認

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -242,7 +242,8 @@
     "contextMenu": {
         "openManager": "Open Tab Manager",
         "saveToCustomGroup": "Save to Custom Group",
-        "newGroup": "New Group..."
+        "newGroup": "New Group...",
+        "saveAllIncludingPinned": "Save All (Including Pinned)"
     },
     "manifest": {
         "description": "Save and manage browser tabs",
