--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -242,7 +242,8 @@
     "contextMenu": {
         "openManager": "タブ管理画面を開く",
         "saveToCustomGroup": "カスタムグループに保存",
-        "newGroup": "新規グループ..."
+        "newGroup": "新規グループ...",
+        "saveAllIncludingPinned": "固定タブも含めてすべてしまう"
     },
     "manifest": {
         "description": "タブを保存して管理する拡張機能",
