feat: グループヘッダ・一括選択操作に「タブグループとして開く」機能を追加
- グループヘッダーに「タブグループとして開く」ボタンを追加
- 選択モードツールバーに「タブグループとして開く」ボタンを追加
- browser.tabs.group() と browser.tabGroups.update() APIを使用
- Chrome/Firefoxマニフェストに tabGroups 権限を追加
- Firefox最小バージョンを139に引き上げ（tabGroups.update()サポート）
- Vivaldi用polyfill追加（vivExtDataでタブスタックを作成）
- ユニットテスト3件、E2Eテスト2件を追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -186,6 +186,7 @@
         },
         "group": {
             "openButton": "Open Group",
+            "openAsTabGroupButton": "Open as Tab Group",
             "deleteButton": "Delete Group"
         },
         "confirmDialog": {
@@ -231,6 +232,7 @@
             "bulkDelete": "Delete Selected",
             "bulkMoveToGroup": "Move to Group",
             "bulkRemoveFromGroup": "Remove from Group",
+            "openAsTabGroup": "Open as Tab Group",
             "confirmDeleteTitle": "Delete Selected Tabs",
             "confirmDeleteMessage": "Delete {count} tabs? This action cannot be undone."
         },
