feat: 検索オプションボタン（Aa, ab, .*）を追加
タブ管理画面の検索ボックスにエディタ風のトグルボタンを追加。

- [Aa] 大文字/小文字を区別
- [ab] 単語単位で検索（下線付き）
- [.*] 正規表現モード

各オプションは組み合わせて使用可能。
無効な正規表現パターンの場合はエラー表示。

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -152,7 +152,13 @@
             "deleteAllButton": "Delete All"
         },
         "search": {
-            "placeholder": "Search by URL or title..."
+            "placeholder": "Search by URL or title...",
+            "options": {
+                "caseSensitive": "Match Case",
+                "wholeWord": "Match Whole Word",
+                "useRegex": "Use Regular Expression"
+            },
+            "regexError": "Invalid regex"
         },
         "sort": {
             "groupLabel": "Group Order:",
