feat: アイコンクリック時の動作設定を追加
設定画面に「アイコンクリック」セクションを追加。

- 自動クローズルール適用の有効/無効トグル
- 固定タブの扱い設定（何もしない/サスペンドを試みる）
- E2Eテスト6件を追加（計28件）

固定タブのサスペンドはブラウザの制限により動作しない場合がある旨を
ヒントテキストに明記。

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,6 +99,18 @@
             "intervalMs": "ms",
             "intervalHint": "Delay between opening multiple tabs (0-1000 ms). Default is 100 ms."
         },
+        "iconClick": {
+            "title": "Icon Click",
+            "description": "Configure behavior when the extension icon is clicked.",
+            "applyRules": "Apply auto close rules",
+            "applyRulesHint": "When enabled, auto close rules are also applied when clicking the icon.",
+            "pinnedTabs": {
+                "label": "Pinned Tab Handling",
+                "skip": "Do nothing",
+                "suspend": "Try to suspend"
+            },
+            "pinnedTabsHint": "Pinned tabs are not saved or closed. Suspend may not work due to browser limitations."
+        },
         "dataManagement": {
             "title": "Data Management",
             "tabData": "Tab Data",
