feat: 定期バックアップ機能を実装
- dbSchema.ts: BackupTab/BackupRecord型定義、BACKUPS_STORE_NAME追加、DB_VERSION=3に更新
- backupStorage.ts: バックアップ作成/一覧/復元/削除/エクスポート機能を新規実装
- settings.ts: バックアップ設定（有効/無効、間隔プリセット、カスタム間隔、世代数）を追加
- background/backup.ts: chrome.alarmsを使用したバックアップスケジューラを新規実装
- background/index.ts: バックアップモジュール統合、メッセージハンドラ追加
- BackupSettings.tsx: 設定UI（手動バックアップ、履歴一覧、復元/エクスポート/削除）を新規実装
- ja.json/en.json: バックアップ関連の翻訳キーを追加
- storage.ts: DBマイグレーションでインデックス存在チェックを追加（再読込エラー修正）
- e2e/helpers.ts: DB_VERSION=3に更新、バックアップストア対応

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -151,6 +151,43 @@
             "cancelButton": "Cancel",
             "confirmButton": "Start Import",
             "successMessage": "Import complete: {imported} added, {skipped} skipped"
+        },
+        "backup": {
+            "title": "Auto Backup",
+            "description": "Periodically backup your saved tabs.",
+            "enableLabel": "Enable auto backup",
+            "intervalLabel": "Backup interval",
+            "interval": {
+                "off": "Off",
+                "1h": "Every hour",
+                "6h": "Every 6 hours",
+                "12h": "Every 12 hours",
+                "24h": "Every 24 hours",
+                "custom": "Custom"
+            },
+            "customIntervalLabel": "min",
+            "keepCountLabel": "Backups to keep",
+            "keepCountHint": "0=disabled, -1=unlimited",
+            "manualBackup": "Backup now",
+            "backupList": "Backup history",
+            "noBackups": "No backups available",
+            "restore": "Restore",
+            "export": "Export",
+            "delete": "Delete",
+            "restoreDialogTitle": "Restore from backup",
+            "restoreDialogMessage": "Restore from backup created on {date}?",
+            "restoreMode": {
+                "merge": "Merge (combine with existing data)",
+                "overwrite": "Overwrite (replace existing data)"
+            },
+            "restoreSuccess": "Restore complete: {restored} added, {skipped} skipped",
+            "backupSuccess": "Backup created successfully",
+            "exportSuccess": "Backup exported successfully",
+            "deleteSuccess": "Backup deleted",
+            "lastBackup": "Last backup: {datetime}",
+            "tabCount": "{count} tabs",
+            "confirmDeleteTitle": "Delete backup",
+            "confirmDeleteMessage": "Delete backup from {date}?"
         }
     },
     "tabManager": {
