feat: コンパクト表示モード機能の実装
表示密度をドロップダウンメニューで切り替え可能に。
コンパクト表示モードの主な機能：
- 表示密度の選択（通常 / コンパクト）
- スクリーンショットインジケータ（📷）によるホバープレビュー
- マウスカーソル追従のスクリーンショットポップアップ
- 最終アクセス・保存日時の表示

バグ修正:
- useImageLoader表示モード切替時のURL保持問題を修正
- ポップアップ位置計算で画面外表示される問題を修正
- 表示密度ボタンのローカライゼーションキー修正

テスト:
- E2Eテスト1件追加（コンパクト表示スクリーンショットホバー）
- 全173件のユニットテスト・70件のE2Eテストパス

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -266,7 +266,11 @@
         "viewMode": {
             "grouped": "Grouped",
             "flat": "Flat",
-            "toggleButton": "Toggle View"
+            "normal": "Normal",
+            "compact": "Compact",
+            "toggleButton": "Toggle View",
+            "groupMode": "Group Mode",
+            "density": "Density"
         },
         "customGroup": {
             "sectionTitle": "Custom Groups",
