feat: コンテキストメニューに「TabBurrow」親メニューを追加
ページの右クリックメニューに「TabBurrow」親メニューを新設し、
コンテキストメニュー機能を整理した。

変更内容:
- 「TabBurrow」親メニューを追加
- 「カスタムグループに保存」をサブメニューに移動
- 「タブ管理から削除して閉じる」機能を新規追加
  - 管理対象のタブの場合、ストレージから削除してタブを閉じる
  - 管理対象外の場合でもタブを閉じる
- updateContextMenuVisibility()を更新し、管理対象タブで「削除して閉じる」を有効化
- storage.tsのfindTabByUrl()をexportに変更
- ユニットテスト2件を追加
- ドキュメント(background_features.md)を更新

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -304,7 +304,9 @@
         "openManager": "Open Tab Manager",
         "saveToCustomGroup": "Save to Custom Group",
         "newGroup": "New Group...",
-        "saveAllIncludingPinned": "Save All (Including Pinned)"
+        "saveAllIncludingPinned": "Save All (Including Pinned)",
+        "tabBurrow": "TabBurrow",
+        "removeAndClose": "Remove from Tab Manager and Close"
     },
     "manifest": {
         "description": "Save and manage browser tabs",
