feat: 「すべて開く」ボタンに確認ダイアログを追加
- ConfirmDialogコンポーネントを汎用化（confirmButtonText, confirmButtonStyleプロパティ追加）
- App.tsxのhandleOpenAll関数を修正して常に確認ダイアログを表示
- 日本語/英語のローカライズキーを追加（openAllTitle, openAllMessage, openAllConfirm）
- ConfirmDialogのユニットテスト3件追加
- E2Eテスト2件追加（ダイアログ表示とキャンセル動作）

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -248,7 +248,10 @@
             "deleteGroupTitle": "Delete Group",
             "deleteGroupMessage": "Delete all {count} tabs from \"{domain}\"?",
             "deleteAllTitle": "Delete All",
-            "deleteAllMessage": "Delete all {count} saved tabs? This action cannot be undone."
+            "deleteAllMessage": "Delete all {count} saved tabs? This action cannot be undone.",
+            "openAllTitle": "Open All Tabs",
+            "openAllMessage": "Open {count} tabs?",
+            "openAllConfirm": "Open"
         },
         "dateFilter": {
             "toggleButton": "Date Filter",
