feat: デフォルト表示モード設定を追加
設定画面でタブ管理画面のデフォルト表示モードを設定できるようになりました。

- settings.ts: ViewMode/DisplayDensity型定義とSettingsに追加
- ViewModeSettings.tsx: 新規設定コンポーネント
- options/App.tsx: 設定画面に統合
- tabs/App.tsx: 設定から初期表示モードを読み込み
- 日英ローカライゼーション追加
- E2Eテスト6件追加
- ドキュメント更新

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,6 +70,12 @@
                 "cancel": "Cancel"
             }
         },
+        "viewMode": {
+            "title": "Default View Mode",
+            "description": "Configure the initial view mode when opening the tab manager.",
+            "groupModeLabel": "Group Mode",
+            "densityLabel": "Display Density"
+        },
         "sort": {
             "title": "Sort Order",
             "description": "Configure the display order in the tab manager.",
