--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -70,6 +70,12 @@
                 "cancel": "キャンセル"
             }
         },
+        "viewMode": {
+            "title": "デフォルト表示モード",
+            "description": "タブ管理画面を開いた時の初期表示モードを設定します。",
+            "groupModeLabel": "グループ化",
+            "densityLabel": "表示密度"
+        },
         "sort": {
             "title": "ソート順",
             "description": "タブ管理画面での表示順を設定します。",
