feat: JSネイティブダイアログをReactコンポーネントに置き換え
- PromptDialog, AlertDialogコンポーネントを新規作成
- LinkCheckDialog.tsx: window.confirm/promot → ConfirmDialog/PromptDialog
- GroupHeader.tsx: prompt → PromptDialog（App.tsx経由）
- DataManagement.tsx: alert × 11箇所 → AlertDialog
- ローカライズファイルにdialogセクション追加
- E2Eテスト修正（ConfirmDialog対応）

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,10 @@
         "tabs": "tabs",
         "tabCount": "{count} tabs"
     },
+    "dialog": {
+        "ok": "OK",
+        "promptPlaceholder": "Enter value"
+    },
     "settings": {
         "title": "TabBurrow - Settings",
         "headerTitle": "Settings",
