feat: クレジットページを追加
設定画面からアクセス可能なクレジットページを作成し、
使用ライブラリとそのライセンス情報を表示する機能を実装。

- 本番依存ライブラリ5件のライセンス情報を表示
  - React, ReactDOM (MIT)
  - react-virtuoso (MIT)
  - Lucide React (ISC/MIT)
  - webextension-polyfill (MPL-2.0)

- 開発依存ライブラリ8件のライセンス情報を表示
  - TypeScript (Apache-2.0)
  - esbuild (MIT)
  - Vitest (MIT)
  - Playwright (Apache-2.0)
  - jsdom (MIT)
  - @types/react, @types/react-dom, @types/webextension-polyfill (MIT)

- ヘッダー/フッターをoptionsページと統一
- ダークモード対応
- E2Eテスト5件追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -381,5 +381,14 @@
                 "cancel": "Cancel"
             }
         }
+    },
+    "credits": {
+        "title": "TabBurrow - Credits",
+        "headerTitle": "Credits",
+        "description": "TabBurrow uses the following open source libraries. Thanks to all the developers who made these projects possible.",
+        "backToSettings": "Back to Settings",
+        "extensionLicense": "TabBurrow is released under the MIT License",
+        "runtimeDependencies": "Runtime Dependencies",
+        "devDependencies": "Development Dependencies"
     }
 }
