feat: コンテキストメニューに「このURLを自動収納の対象外にする」機能を追加
ページコンテキストメニューと拡張アイコンコンテキストメニューの両方に
自動収納除外機能を追加しました。

機能:
- 現在のURL（クエリパラメータ含む完全URL）から正規表現パターンを自動生成
- promptダイアログでパターンを確認・編集可能
- ルール名はパターンそのものを使用（設定画面で見やすい）

メニュー表示条件:
- 自動収納が無効の場合: 無効（グレーアウト）
- 既に除外ルールが適用されている場合: 無効
- 自動収納が有効かつ未除外の場合: 有効

技術的な変更:
- src/background/contextMenu.ts: メニュー項目とハンドラを追加
- src/background/index.ts: 起動時にメニュー状態を初期化
- src/locales/ja.json, en.json: ローカライズキーを追加
- src/background/contextMenu.test.ts: ユニットテスト4件追加
- docs/background_features.md: ドキュメント更新

注意: Vivaldiでは動作に問題がありますが、別タスクで対応予定です。

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -319,7 +319,9 @@
         "newGroup": "New Group...",
         "saveAllIncludingPinned": "Stash All (Including Pinned)",
         "tabBurrow": "TabBurrow",
-        "removeAndClose": "Remove from Tab Manager and Close"
+        "removeAndClose": "Remove from Tab Manager and Close",
+        "excludeFromAutoClose": "Exclude this URL from auto stash",
+        "excludePrompt": "Enter exclusion pattern (regex)"
     },
     "manifest": {
         "description": "Save and manage browser tabs",
