refactor: コード品質改善のリファクタリング
## ダイアログコンポーネントの統合
- ConfirmDialogをtabs/からcommon/に移動
- useDialogフックを作成（ESCキー、オーバーレイクリック処理の共通化）
- AlertDialog、PromptDialogをuseDialogフック使用にリファクタリング
- ダイアログのアイコンとタイトルを1行レイアウトに変更
- 絵文字アイコンをLucideアイコンに置き換え、色を追加

## extractDomain関数の統合
- src/utils/url.tsに共通ユーティリティとして抽出
- tabSaver、linkChecker、exportImport、autoClose、contextMenuのインポートを更新

## useClickOutsideフックの作成
- src/common/hooks/useClickOutside.tsを新規作成

## リンクチェック機能の改善
- 結果アイコンに色分けを追加（alive:緑、warning:オレンジ、dead:赤）
- linkCheck.resume翻訳キーを追加
- 再開ボタンの位置をキャンセルボタンと統一

## テスト
- useDialogフックのテストを追加（7テスト）
- ConfirmDialogのテストをcommon/に移動・更新（10テスト）
- extractDomainのテストを追加（10テスト）
- useClickOutsideフックのテストを追加（5テスト）
- tabSaver.testから重複テストを削除

## ドキュメント
- architecture.mdにcommon/とutils/ディレクトリを追記

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -350,6 +350,7 @@
         "moveToGroup": "Move to Group",
         "cancel": "Cancel",
         "close": "Close",
+        "resume": "Resume",
         "statusCode": "Status",
         "confirmDeleteTitle": "Delete Selected Tabs",
         "confirmDeleteMessage": "Delete {count} tabs?",
