feat: コンテキストメニューからグループ作成機能を追加
- 「現在のURLからグループ作成」メニューを追加
  - 現在のURL（パス・クエリ含む）をパターンとしてsaveToGroupルールを作成
- 「現在のドメインからグループ作成」メニューを追加
  - 現在のドメインをパターンとしてsaveToGroupルールを作成
- 2段階プロンプトで正規表現パターンとグループ名を入力
- カスタムグループが存在しない場合は自動作成
- ユニットテスト9件追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -321,7 +321,11 @@
         "tabBurrow": "TabBurrow",
         "removeAndClose": "Remove from Tab Manager and Close",
         "excludeFromAutoClose": "Exclude this URL from auto stash",
-        "excludePrompt": "Enter exclusion pattern (regex)"
+        "excludePrompt": "Enter exclusion pattern (regex)",
+        "createGroupFromUrl": "Create Group from Current URL...",
+        "createGroupFromDomain": "Create Group from Current Domain...",
+        "createGroupPatternPrompt": "Enter regex pattern for matching",
+        "createGroupNamePrompt": "Enter group name to create"
     },
     "manifest": {
         "description": "Save and manage browser tabs",
