--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -321,7 +321,11 @@
         "tabBurrow": "TabBurrow",
         "removeAndClose": "タブ管理から削除して閉じる",
         "excludeFromAutoClose": "このURLを自動収納の対象外にする",
-        "excludePrompt": "除外パターンを入力（正規表現）"
+        "excludePrompt": "除外パターンを入力（正規表現）",
+        "createGroupFromUrl": "現在のURLからグループ作成...",
+        "createGroupFromDomain": "現在のドメインからグループ作成...",
+        "createGroupPatternPrompt": "対象とする正規表現パターンを入力",
+        "createGroupNamePrompt": "作成するグループ名を入力"
     },
     "manifest": {
         "description": "タブを保存して管理する拡張機能",
