feat: 設定画面で未保存の設定変更時に警告ダイアログを表示
設定画面で設定を変更した後、「設定を更新」を押さずに
「タブ管理画面」リンクをクリックした際に警告ダイアログを表示する機能を追加。

- 3つの選択肢を提供（キャンセル、保存せずに移動、保存して移動）
- 日本語・英語の翻訳キーを追加
- E2Eテスト4件を追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,12 @@
         "saveSuccess": "✓ Settings saved",
         "saveError": "✗ Failed to save",
         "importSuccess": "✓ Settings imported",
+        "unsavedWarning": {
+            "title": "Unsaved Changes",
+            "message": "You have unsaved changes. If you leave without saving, your changes will be lost.",
+            "saveAndLeave": "Save and Leave",
+            "leaveWithoutSaving": "Leave Without Saving"
+        },
         "language": {
             "title": "Language",
             "description": "Select display language.",
