feat: コンテキストメニューに「このページを収納する」機能を追加
- 拡張アイコン右クリックとページ右クリックの両方からアクセス可能
- アクティブタブをドメイングループとして保存し、タブを閉じる
- 特殊URL（chrome://, about:など）ではメニューを無効化
- 日本語・英語の翻訳を追加
- ユニットテストを追加（7件）

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -331,7 +331,8 @@
         "createGroupFromUrl": "Create Group from Current URL...",
         "createGroupFromDomain": "Create Group from Current Domain...",
         "createGroupPatternPrompt": "Enter regex pattern for matching",
-        "createGroupNamePrompt": "Enter group name to create"
+        "createGroupNamePrompt": "Enter group name to create",
+        "stashThisPage": "Stash This Page"
     },
     "manifest": {
         "description": "Save and manage browser tabs",
