feat: 管理UI内でカスタムグループを作成できる機能を追加
- ヘッダーに「新規グループ作成」ボタンを追加（FolderPlusアイコン）
- タブカードの「グループに移動」メニューに「新規グループを作成...」オプションを追加
- 選択モード時の一括操作に「新規グループを作成...」オプションを追加
- グループがない場合でもグループ移動メニューを表示可能に変更
- i18n対応（日本語・英語）
- E2Eテスト5件追加（計100件パス）
- ドキュメント更新（ui_guide.md）

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -298,7 +298,10 @@
             "rename": "Rename Group",
             "renameDialogTitle": "Enter group name",
             "deleteConfirmTitle": "Delete Custom Group",
-            "deleteConfirmMessage": "Delete group \"{name}\"? Tabs will be moved back to domain groups."
+            "deleteConfirmMessage": "Delete group \"{name}\"? Tabs will be moved back to domain groups.",
+            "createButton": "Create Group",
+            "createDialogTitle": "Enter new group name",
+            "createNew": "Create New Group..."
         },
         "selection": {
             "toggleButton": "Select",
