feat: 設定画面にカスタムグループ管理機能を追加
- 新規コンポーネント CustomGroupSettings.tsx を追加
  - カスタムグループの一覧表示（タブ数付き）
  - グループの作成・編集・削除機能
  - lucide-react アイコン使用
- SettingsSection の icon prop を ReactNode に対応
- PromptDialog に error prop を追加
- ダイアログコンポーネントに createPortal を適用
  - 親要素のCSSの影響を受けずに全画面オーバーレイを表示
- 共通ダイアログスタイルを common/common.css に分離
- 翻訳ファイル（ja.json, en.json）に customGroups セクションを追加
- ユニットテスト（9件）、E2Eテスト（7件）を追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -204,6 +204,21 @@
             "tabCount": "{count} tabs",
             "confirmDeleteTitle": "Delete backup",
             "confirmDeleteMessage": "Delete backup from {date}?"
+        },
+        "customGroups": {
+            "title": "Custom Groups",
+            "description": "Manage custom groups for organizing tabs.",
+            "empty": "No custom groups",
+            "tabCount": "{count} tabs",
+            "addGroup": "Create New Group",
+            "editGroup": "Edit Group Name",
+            "deleteGroup": "Delete Group",
+            "renameDialogTitle": "Enter group name",
+            "deleteConfirmTitle": "Delete Group",
+            "deleteConfirmMessage": "Delete \"{name}\"? Tabs will be moved back to domain groups.",
+            "createDialogTitle": "Enter new group name",
+            "duplicateError": "A group with this name already exists",
+            "emptyNameError": "Please enter a group name"
         }
     },
     "tabManager": {
