feat: グループ折りたたみ/展開機能を追加
- グループヘッダーをクリックしてグループを折りたたみ/展開可能に
- キーボード操作（Enter/Space）にも対応
- 折りたたみ状態はbrowser.storage.localに永続化され、ページリロード後も維持
- ユニットテストとE2Eテストを追加
- ドキュメントを更新

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -273,7 +273,9 @@
         "group": {
             "openButton": "Open Group",
             "openAsTabGroupButton": "Open as Tab Group",
-            "deleteButton": "Delete Group"
+            "deleteButton": "Delete Group",
+            "collapseButton": "Collapse",
+            "expandButton": "Expand"
         },
         "confirmDialog": {
             "deleteGroupTitle": "Delete Group",
