feat: ドメイングループ名の変更機能を追加
ドメイングループ（自動グループ）に対して、ユーザー定義の表示名（エイリアス）を設定できる機能を実装しました。
これにより、ドメイン名をより分かりやすい名前に変更して管理することが可能になります。

変更内容:
- 設定にドメイングループのエイリアスマッピングを追加 (src/settings.ts)
- グループヘッダーにリネームボタンを追加し、エイリアス表示に対応 (src/tabs/GroupHeader.tsx)
- タブリストでのエイリアスデータの受け渡し実装 (src/tabs/TabList.tsx, src/tabs/App.tsx)
- 設定画面に「ドメイングループ設定」セクションを追加し、エイリアスの管理（追加・編集・削除）を可能に (src/options/components/DomainGroupSettings.tsx)
- 日本語・英語のローカリゼーション対応 (src/locales/)
- E2Eテストの追加 (e2e/domain_group_naming.spec.ts)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -219,6 +219,23 @@
             "createDialogTitle": "Enter new group name",
             "duplicateError": "A group with this name already exists",
             "emptyNameError": "Please enter a group name"
+        },
+        "domainGroups": {
+            "title": "Domain Alias Settings",
+            "description": "Manage display aliases for domain names.",
+            "empty": "No aliases configured.",
+            "addAlias": "Add Alias",
+            "editAlias": "Edit Alias",
+            "deleteAlias": "Delete Alias",
+            "domainPlaceholder": "Domain name (e.g. example.com)",
+            "aliasPlaceholder": "Display Name",
+            "createDialogTitle": "Add Alias",
+            "renameDialogTitle": "Edit Alias",
+            "deleteConfirmTitle": "Delete Alias",
+            "deleteConfirmMessage": "Delete alias for \"{domain}\"?",
+            "emptyDomainError": "Please enter a domain name",
+            "emptyAliasError": "Please enter a display name",
+            "duplicateError": "Alias for this domain already exists"
         }
     },
     "tabManager": {
@@ -285,6 +302,13 @@
             "openAllTitle": "Open All Tabs",
             "openAllMessage": "Open {count} tabs?",
             "openAllConfirm": "Open"
+        },
+        "promptDialog": {
+            "renameGroupTitle": "Rename Group",
+            "renameGroupMessage": "Enter new group name",
+            "createGroupTitle": "Create New Group",
+            "createGroupMessage": "Enter group name",
+            "createGroupPlaceholder": "Group Name"
         },
         "dateFilter": {
             "toggleButton": "Date Filter",
