--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -218,7 +218,9 @@
             "deleteConfirmMessage": "Delete \"{name}\"? Tabs will be moved back to domain groups.",
             "createDialogTitle": "Enter new group name",
             "duplicateError": "A group with this name already exists",
-            "emptyNameError": "Please enter a group name"
+            "emptyNameError": "Please enter a group name",
+            "showInDomainGroups": "Show custom grouped tabs in domain groups",
+            "showInDomainGroupsHelp": "If enabled, tabs belonging to custom groups will also be displayed in their original domain groups."
         },
         "domainGroups": {
             "title": "Domain Alias Settings",
