--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -218,7 +218,9 @@
             "deleteConfirmMessage": "「{name}」を削除しますか？グループ内のタブはドメイングループに戻ります。",
             "createDialogTitle": "新規グループ名を入力",
             "duplicateError": "同じ名前のグループが既に存在します",
-            "emptyNameError": "グループ名を入力してください"
+            "emptyNameError": "グループ名を入力してください",
+            "showInDomainGroups": "カスタムグループのタブをドメイングループにも表示する",
+            "showInDomainGroupsHelp": "有効にすると、カスタムグループに所属するタブが、元のドメイングループにも重複して表示されます。"
         },
         "domainGroups": {
             "title": "ドメイングループ設定",
